tests/fixtures/valid/bell.ket
circuit bell() {
  qubit q[2]
  H q[0]
  CNOT q[0], q[1]
  let r = measure q
}

run bell()
