tests/fixtures/invalid/cnot-arity.ket
qubit q[2]
CNOT q[0]
